--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "md-reader",
   "version": "0.1.2",
+  "scripts": {
+    "start": "bun dev",
+    "build": "react-scripts build"
+  },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
